--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
     "chart.js": "^4.4.5",
+    "formik": "^2.4.6",
     "next": "15.0.0",
     "react": "19.0.0-rc-65a56d0e-20241020",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "19.0.0-rc-65a56d0e-20241020"
+    "react-dom": "19.0.0-rc-65a56d0e-20241020",
+    "react-toastify": "^10.0.6",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "daisyui": "^4.12.13",
