--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,14 +1,15 @@
 {
   "dependencies": {
+    "@neondatabase/serverless": "^0.10.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "nodemon": "^3.1.7"
   },
   "name": "back-end",
   "version": "1.0.0",
   "main": "server.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx nodemon server.js",
