--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,6 +15,7 @@
     "next": "15.0.0",
     "react": "19.0.0-rc-65a56d0e-20241020",
     "react-chartjs-2": "^5.2.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "19.0.0-rc-65a56d0e-20241020",
     "react-toastify": "^10.0.6",
     "yup": "^1.4.0"
