--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,10 +13,10 @@
     "chart.js": "^4.4.5",
     "formik": "^2.4.6",
     "next": "15.0.0",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-colorful": "^5.6.1",
-    "react-dom": "19.0.0-rc-65a56d0e-20241020",
+    "react-dom": "^18.3.1",
     "react-toastify": "^10.0.6",
     "yup": "^1.4.0"
   },
